[package]
name = "eventually-event-store-db"
description = "Event Store implementation using EventStoreDb, for Eventually crate"
version = "0.9.0"
edition = "2018"
authors = ["Fabio Lama <fabio.lama@pm.me>"]
license = "MIT"
readme = "../README.md"
repository = "https://github.com/eventually-rs/eventually-rs"

categories = ["web-programming", "asynchronous"]
keywords = ["event-store-db", "eventstoredb", "eventually", "event-store", "ddd", "event-sourcing"]

[dependencies]
serde = "1.0.118"
eventually = { version = "0.4.0", path = "../eventually", features = ["serde"] }
thiserror = "1.0.21"
futures = "0.3.8" 
eventstore = "0.9.9"
