[package]
name = "eventually-event-store-db"
description = "Event Store implementation using EventStoreDb, for Eventually crate"
version = "0.9.0"
edition = "2018"
authors = ["Fabio Lama <fabio.lama@pm.me>"]
license = "MIT"
readme = "../README.md"
repository = "https://github.com/eventually-rs/eventually-rs"

categories = ["web-programming", "asynchronous"]
keywords = ["event-store-db", "eventstoredb", "eventually", "event-store", "ddd", "event-sourcing"]

[features]
verify-connection = ["tokio"]

[dependencies]
tokio = { version = "0.2", features = ["sync", "macros", "time"], optional = true }
serde = { version = "1.0.118", features = ["derive"] }
serde_json = "1.0.61"
bytes = "0.5.6"
eventually = { version = "0.4.0", path = "../eventually", features = ["serde"] }
thiserror = "1.0.21"
futures = "0.3.8" 
eventstore = "0.9.9"
uuid = "0.8.1"

[dev-dependencies]
eventually-event-store-db = { path = ".", features = ["verify-connection"] }
async-trait = "0.1.42"
